# kara-no-kyoukai

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
backend/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/common/: mixins.py
backend/core/: admin.py  models.py
backend/core/api/v1/: filters.py  serializers.py  urls.py  views.py
backend/core/manage/: seed.json
dockers/django/: pyproject.toml
dockers/nextjs/karaoke-nextjs/: package-lock.json  package.json
dockers/nginx/: nginx.conf
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/songs/: page.tsx
frontend/src/app/: layout.tsx
frontend/src/pages/: artists.tsx  index.tsx  songs.tsx
frontend_2/src/components/: Header.tsx  NavButton.tsx
karanokyoukai/: manage.py
karanokyoukai/core/: models.py
karanokyoukai/core/migrations/: 0001_initial.py
karanokyoukai/karanokyoukai/: asgi.py  settings.py  urls.py  wsgi.py
karaoke-django/backend/: settings.py
karaoke-django/core/manage/: seed.json
karaoke-nextjs/: package-lock.json
karaoke-nextjs/app/: layout.tsx  page.tsx
karaoke-nextjs/app/(categories)/: layout.tsx
karaoke-nextjs/app/(homepage)/: layout.tsx
karaoke-nextjs/app/(player_home)/: layout.tsx
karaoke-nextjs/app/artist/: layout.tsx  page.tsx
karaoke-nextjs/app/components/: card.tsx  navbar.tsx  player.tsx  playlist.tsx  playlist_entry.tsx  songCard.tsx  songList.tsx
karaoke-nextjs/app/context/: PlayerContext.tsx  (+1 more)
nextjs/: eslint.config.mjs  package-lock.json  package.json
nextjs/app/: page.tsx
(+59 files in other folders)
